test/valid/FieldIdEqPrimitiveString/Main.plume
/**
 * @author Diogo Marques, 30100
 */
class Main extends Object is
	
	method main : () -> String is
		new FieldIdEqPrimitiveString("abc").toString()